--- a/packages/index2.html
+++ b/packages/index2.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h1>Hello World</h1>
-    <h1>Hello World</h1>
+    <div>Hello World</div>
 </body>
 </html>
